<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/statsPageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statsPgLblStr"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	<Spinner
        android:id="@+id/spinLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/strLevelLbl" />



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/tvGamesLbl"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="6"
           android:text="@string/strGamesLbl"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvGamesVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/strGamesVal"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </LinearLayout>

        <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/tvAveLbl"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="6"
           android:text="@string/strAveLbl"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvAveVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/strAveVal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
	<LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/tvMinLbl"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="6"
           android:text="@string/strMinLbl"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvMinVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/strMinVal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>    

	<LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/tvMaxLbl"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="6"
           android:text="@string/strMaxLbl"
           android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/tvMaxVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/strMaxVal"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/tvQuitLbl"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="6"
           android:text="@string/strQuitLbl"
           android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvQuitVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/strQuitVal"            
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>



</LinearLayout>